--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
       "@types/passport": "^1.0.7",
       "@types/passport-facebook": "^2.1.11",
       "@types/passport-google-oauth2": "^0.1.4",
-      "@types/passport-local": "^1.0.34",
-      "ts-node": "^3.3.0"
+      "@types/passport-local": "^1.0.34"
    },
    "dependencies": {
       "bcryptjs": "^2.4.3",
@@ -35,6 +34,7 @@
       "passport-google-oauth2": "^0.2.0",
       "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.10",
+      "ts-node": "^10.5.0",
       "tsc": "^2.0.4",
       "typeorm": "0.2.41",
       "typescript": "^4.5.5"
